--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Analyze past player performance to find best starts each week",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,22 @@
   "bugs": {
     "url": "https://github.com/brianrcoyle/fantasy-football-analysis/issues"
   },
-  "homepage": "https://github.com/brianrcoyle/fantasy-football-analysis#readme"
+  "homepage": "https://github.com/brianrcoyle/fantasy-football-analysis#readme",
+  "dependencies": {
+    "immutable": "^3.8.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "eslint": "^2.10.2",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-react": "^5.1.1",
+    "webpack": "^1.13.1"
+  }
 }
